--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,14 +3,15 @@
   cursor: pointer;
   position: fixed;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   text-transform: uppercase;
-  background-color: #39445a;
-  font-family: "Montserrat", sans-serif;
+  background-color: #000000;
+font-family: 'Pacifico', cursive;
   font-size: 5vw;
+  font-weight: 300;
   padding-bottom: 15px;
   box-shadow: 0px 1px 5px black;
-  color: white;
+  color: #FF0000;
   z-index: 100;
 }
 
